--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <!-- придумать описание страницы -->
     <meta name="description" content="придумать описание страницы">
-    <title>IdsStore</title>
-    <link rel="stylesheet" href="./general.css" media="screen and (max-width: 1920px)">
-    <link rel="stylesheet" href="./header/header.css" media="screen and (max-width: 1920px)">
-    <link rel="stylesheet" href="./main/main.css" media="screen and (max-width: 1920px)" >
-    <link rel="stylesheet" href="./footer/footer.css"media="screen and (max-width: 1920px)">
+    <title>IdsStore-Магазин бытовок</title>
+    <link rel="stylesheet" href="./general.css" media="all">
+    <link rel="stylesheet" href="./header/header.css" media="all">
+    <link rel="stylesheet" href="./main/main.css" media="all" >
+    <link rel="stylesheet" href="./footer/footer.css" media="all">
 </head>
 <body>
     <header>
         <div class="headerTop">
-            <a href="#" class="headerTop__logo">
+            <a href="./index.html" class="headerTop__logo">
                 <span>IdsStore</span>
                 <span>Магазин бытовок</span>
             </a>
@@ -34,7 +34,7 @@
             </div>
         </div>
         <div class="services">
-            <a href="">Каталог <div class="menu"><span></span></div></a>
+            <a href="./katalog/katalog.html">Каталог <div class="menu"><span></span></div></a>
             <a href="">О нас</a>
             <a href="">Услуги</a>
             <a href="./contact/contact.html">Контакты</a>
@@ -48,7 +48,7 @@
             <div class="sidebar">
                 <div class="sidebar__menu">
                     <div class="sidebar__row">
-                        <a href="">Каталог <div class="iconMenu"><span></span></div></a>
+                        <a href="./katalog/katalog.html">Каталог <div class="iconMenu"><span></span></div></a>
                         <p class="sidebar__close">X</p>
                     </div>
                     <a href="">О нас</a>
@@ -223,7 +223,7 @@
                     </div>
                 </div>
                 <div class="slider">
-                    <div class="slider-line">
+                    <div class="furniture__slider">
                     </div>
                 </div>
         </div>
@@ -235,10 +235,10 @@
                 <button class="next">→</button>
             </div>
             <div class="slider">
-                <div class="slider-line">
+                <div class="katalog__slider">
                 </div>
             </div>
-            <a href="" class="more">посмотреть все бытовки</a>
+            <a href="./katalog/katalog.html" class="more">посмотреть все бытовки</a>
         </div>
         <div class="line"></div>
     </main>
@@ -250,7 +250,7 @@
                     <div class="answer__question">
                         <div class="answer__info">i</div>
                         <p>бытовка автономная?</p>
-                        <p class="answer__open">v</p>
+                        <p class="answer__open">></p>
                     </div>
                     <div class="answer__content">Нет, нужно будет подключать воду, электричество и канализацию</div>
                 </div>
@@ -260,7 +260,7 @@
                     <div class="answer__question">
                         <div class="answer__info">i</div>
                         <p>Какое состояние у бытовок?</p>
-                        <p class="answer__open">v</p>
+                        <p class="answer__open">></p>
                     </div>
                     <div class="answer__content">Бытовки б/у, все в хорошем состояние, чистые, убранные и без посторонних запахов. По запросу перед отправкой можем отправить фото бытовки которая приедет именно к вам.</div>
                 </div>
@@ -270,7 +270,7 @@
                     <div class="answer__question">
                         <div class="answer__info">i</div>
                         <p>Какое состояние у бытовок?</p>
-                        <p class="answer__open">v</p>
+                        <p class="answer__open">></p>
                     </div>
                     <div class="answer__content">Бытовки б/у, все в хорошем состояние, чистые, убранные и без посторонних запахов. По запросу перед отправкой можем отправить фото бытовки которая приедет именно к вам.</div>
                 </div>
@@ -280,7 +280,7 @@
                     <div class="answer__question">
                         <div class="answer__info">i</div>
                         <p>Какое состояние у бытовок?</p>
-                        <p class="answer__open">v</p>
+                        <p class="answer__open">></p>
                     </div>
                     <div class="answer__content">Бытовки б/у, все в хорошем состояние, чистые, убранные и без посторонних запахов. По запросу перед отправкой можем отправить фото бытовки которая приедет именно к вам.</div>
                 </div>
