--- a/aboutUs/aboutUs.html
+++ b/aboutUs/aboutUs.html
@@ -9,7 +9,7 @@
     <title>IdsStore Контакты</title>
     <link rel="stylesheet" href="../general.css" media="all">
     <link rel="stylesheet" href="../header/header.css" media="all">
-    <link rel="stylesheet" href="./contact.css" media="all" >
+    <link rel="stylesheet" href="./aboutUs.css" media="all" >
     <link rel="stylesheet" href="../footer/footer.css"media="all">
 </head>
 <body>
@@ -35,9 +35,9 @@
         </div>
         <div class="services">
             <a href="../katalog/katalog.html">Каталог <div class="menu"><span></span></div></a>
-            <a href="../aboutUs/aboutUs.html">О нас</a>
+            <a href="./aboutUs.html">О нас</a>
             <a href="">Услуги</a>
-            <a href="./contact.html">Контакты</a>
+            <a href="../contact/contact.html">Контакты</a>
             <a href="">Галерея</a>
             <a href="" ><img src="../header/bag.webp" alt="корзина"><div class="services__sum"><p>0</p></div>Корзина</a>
             <a href="" class="services__media"> <img  src="../header/search.webp" alt="поиск"></a>
@@ -47,12 +47,12 @@
             <div class="sidebar">
                 <div class="sidebar__menu">
                     <div class="sidebar__row">
-                        <a href="">Каталог <div class="iconMenu"><span></span></div></a>
+                        <a href="../katalog/katalog.html">Каталог <div class="iconMenu"><span></span></div></a>
                         <p class="sidebar__close">X</p>
                     </div>
-                    <a href="../aboutUs/aboutUs.html">О нас</a>
+                    <a href="./aboutUs.html">О нас</a>
                     <a href="">Услуги</a>
-                    <a href="./contact.html">Контакты</a>
+                    <a href="../contact/contact.html">Контакты</a>
                     <a href="">Галерея</a>
                     <a href="" ><img src="../header/bag.webp" alt="корзина"><div class="services__sum"><p>0</p></div>Корзина</a>
                 </div>
@@ -60,27 +60,33 @@
         </div>
     </header>
     <main>   
-        <div class="map">
-            <h1>Контакты</h2>
-            <div class="map__contact">
-                <div class="map-col">
-                    <h2>Телефон</h2>
-                    <p>+7 (910)973-36-65</p>
+        <div class="about__wrapper">
+            <span><a href="../index.html">главная </a>/<a href="./aboutUs.html"> о нас</a></span>      
+            <h1>О нас</h1>
+            <div class="about">
+                <div class="about__content">
+                    <p>Предоставляем в аренду строительные бытовки различных модификаций для обустройства временного жилья на объектах в Москве и Московской Области, а также на дачных участках. Работаем с крупными компаниями и физическими лицами. У нас можно взять в аренду бытовку в количестве от 1 единицы на неограниченный срок. Минимальный — 1 месяц.</p>
+                    <p>Не завышаем стоимость модулей и блок-контейнеров. Подбираем комплектацию в соответствии с бюджетом заказчика.</p>
+                    <div class="fd-row">
+                        <a href="" class="content__Youtube"><div class="block1"></div></a>
+                        <a href=""> <p class="content__text">Наш Youtube канал</p></a>
+                    </div>
                 </div>
-                <div class="map-col">
-                    <h2>Адрес</h2>
-                    <p>г. ярославль, ул 2-я Тарная 2</p>
-                </div>
-                <div class="map-col">
-                    <h2>Электронная почта</h2>
-                    <p>dir@ids76.ru</p>
+                <div class="about__block">
+                    <img src="./Group.png" alt="">
                 </div>
             </div>
-            <div id="map__yandex">
-                <script type="text/javascript" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A1de37163293f4e550481d9ca14ec396e5a467508c7cd738b2b7f8c1037132ff8&amp;width=100%25&amp;height=350&amp;lang=ru_RU&amp;scroll=true"></script>
+            <div class="about">
+                <div class="about__blockAbsolute">
+                    <img src="./cubinsForLive.webp" alt="бытовки для проживания">
+                    <img src="./Group.png" alt="">
+                </div>
+                <div class="about__content">
+                    <h2>бытовки для любых нужд</h2>
+                    <p>У нас вы найдёте временные здания для обеспечения жильём строителей на объекте, хранения различных товаров и инвентаря. Каждый блок-контейнер имеет практически универсальное назначение. При необходимости его можно переоборудовать под другие нужды. <br> Кроме аренды бытовок предоставляем услуги по их доставке, монтажу. Модули доставляются собственными манипуляторами компании, устанавливаются опытными мастерами. На строительные работы распространяется гарантия</p>
+                </div>
             </div>
-        </div>
-        
+        </div>  
     </main>
     <footer>
         <div class="pd-100">
@@ -163,8 +169,8 @@
                 </div>
                 <div class="d-col">
                     <h4>Информация</h4>
-                    <a href="../aboutUs/aboutUs.html">О нас</a>
-                    <a href="./contact.html">контакты</a>
+                    <a href="./aboutUs.html">О нас</a>
+                    <a href="../contact/contact.html">контакты</a>
                     <a href="">услуги</a>
                     <a href="">галерея</a>
                 </div>
