--- a/index.html
+++ b/index.html
@@ -35,11 +35,10 @@
         </div>
         <div class="services">
             <a href="./katalog/katalog.html">Каталог <div class="menu"><span></span></div></a>
-            <a href="">О нас</a>
+            <a href="./aboutUs/aboutUs.html">О нас</a>
             <a href="">Услуги</a>
             <a href="./contact/contact.html">Контакты</a>
             <a href="">Галерея</a>
-            <a href="">Отзыввы</a>
             <a href="" ><img src="./header/bag.webp" alt="корзина"><div class="services__sum"><p>0</p></div>Корзина</a>
             <a href="" class="services__media"> <img  src="./header/search.webp" alt="поиск"></a>
             <div class="sidebar__open">
@@ -51,11 +50,10 @@
                         <a href="./katalog/katalog.html">Каталог <div class="iconMenu"><span></span></div></a>
                         <p class="sidebar__close">X</p>
                     </div>
-                    <a href="">О нас</a>
+                    <a href="./aboutUs/aboutUs.html">О нас</a>
                     <a href="">Услуги</a>
                     <a href="./contact/contact.html">Контакты</a>
                     <a href="">Галерея</a>
-                    <a href="">Отзывы</a>
                     <a href="" ><img src="./header/bag.webp" alt="корзина"><div class="services__sum"><p>0</p></div>Корзина</a>
                 </div>
             </div>
@@ -223,7 +221,7 @@
                     </div>
                 </div>
                 <div class="slider">
-                    <div class="furniture__slider">
+                    <div class="slider-line">
                     </div>
                 </div>
         </div>
@@ -235,7 +233,7 @@
                 <button class="next">→</button>
             </div>
             <div class="slider">
-                <div class="katalog__slider">
+                <div class="slider-line">
                 </div>
             </div>
             <a href="./katalog/katalog.html" class="more">посмотреть все бытовки</a>
@@ -323,11 +321,10 @@
                 </div>
                 <div class="d-col">
                     <h4>Информация</h4>
-                    <a href="">О нас</a>
+                    <a href="./aboutUs/aboutUs.html">О нас</a>
                     <a href="./contact/contact.html">контакты</a>
                     <a href="">услуги</a>
                     <a href="">галерея</a>
-                    <a href="">отзывы</a>
                 </div>
                 <div class="d-col">
                     <h4>Контакты</h4>
@@ -339,7 +336,6 @@
             </div>
         </div>
     </footer>
-    <script async src="./render.js"></script>
     <script async src="./main.js"></script>
     <script async src="./index.js"></script>
 </body>
